<resources>
    <string name="app_name">Inventory App Stage 1</string>
    <string name="add_product">Add New Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Price</string>
    <string name="product_price_currency">BDT</string>
    <string name="product_quantity">Quantity</string>
    <string name="product_supplier_name">Supplier Name</string>
    <string name="product_supplier_phone_number">Supplier Phone Number</string>
    <string name="supplier_unknown">Unknown</string>
    <string name="supplier_amazon">Amazon</string>
    <string name="supplier_alibaba">Alibaba</string>
    <string name="supplier_pickaboo">Pickaboo</string>
    <string name="action_save">Save</string>
</resources>
